[gd_scene load_steps=2 format=3 uid="uid://b2gi1xlrdmw1p"]

[ext_resource type="Script" path="res://gui/task_tracking/data_manager/task_data_manager.gd" id="1_64y23"]

[node name="DataManager" type="PanelContainer"]
clip_contents = true
custom_minimum_size = Vector2(400, 400)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2
theme_type_variation = &"Panel_Container_Secondary"
script = ExtResource("1_64y23")

[node name="MainMargin" type="MarginContainer" parent="."]
layout_mode = 2

[node name="DataManagerVBox" type="VBoxContainer" parent="MainMargin"]
layout_mode = 2

[node name="DataManagerTitle" type="Label" parent="MainMargin/DataManagerVBox"]
layout_mode = 2
theme_type_variation = &"Label_Title_Secondary"
text = "Data Manager"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="MainMargin/DataManagerVBox"]
layout_mode = 2

[node name="TaskLabel" type="Label" parent="MainMargin/DataManagerVBox"]
layout_mode = 2
theme_type_variation = &"Label_Large"
text = "Task Data"
horizontal_alignment = 1

[node name="CurrentTasksheetLabel" type="Label" parent="MainMargin/DataManagerVBox"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"Label_Medium"
text = "Current Data: [No Data Loaded]: [YEAR]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TaskGrid" type="GridContainer" parent="MainMargin/DataManagerVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
columns = 6

[node name="NewTaskButton" type="Button" parent="MainMargin/DataManagerVBox/TaskGrid"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"Button_Medium"
text = "New
Data"

[node name="NewTaskPanel" type="PanelContainer" parent="MainMargin/DataManagerVBox/TaskGrid"]
unique_name_in_owner = true
layout_mode = 2

[node name="Margin" type="MarginContainer" parent="MainMargin/DataManagerVBox/TaskGrid/NewTaskPanel"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="MainMargin/DataManagerVBox/TaskGrid/NewTaskPanel/Margin"]
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="MainMargin/DataManagerVBox/TaskGrid/NewTaskPanel/Margin/CenterContainer"]
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="MainMargin/DataManagerVBox/TaskGrid/NewTaskPanel/Margin/CenterContainer/VBox"]
layout_mode = 2

[node name="TaskDataTitleLabel" type="Label" parent="MainMargin/DataManagerVBox/TaskGrid/NewTaskPanel/Margin/CenterContainer/VBox/HBox"]
layout_mode = 2
text = "Task Data Title"

[node name="TaskDataTitleLineEdit" type="LineEdit" parent="MainMargin/DataManagerVBox/TaskGrid/NewTaskPanel/Margin/CenterContainer/VBox/HBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Name Here"
alignment = 1
expand_to_text_length = true
clear_button_enabled = true

[node name="TaskAcceptButton" type="Button" parent="MainMargin/DataManagerVBox/TaskGrid/NewTaskPanel/Margin/CenterContainer/VBox/HBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Accept"

[node name="HBoxContainer2" type="HBoxContainer" parent="MainMargin/DataManagerVBox/TaskGrid/NewTaskPanel/Margin/CenterContainer/VBox"]
layout_mode = 2

[node name="TaskDataYearLabel" type="Label" parent="MainMargin/DataManagerVBox/TaskGrid/NewTaskPanel/Margin/CenterContainer/VBox/HBoxContainer2"]
layout_mode = 2
text = "Task Data Year"

[node name="TaskDataYearSpinbox" type="SpinBox" parent="MainMargin/DataManagerVBox/TaskGrid/NewTaskPanel/Margin/CenterContainer/VBox/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = 1000.0
max_value = 3000.0
value = 2000.0
rounded = true
allow_greater = true
alignment = 1

[node name="TaskCancelButton" type="Button" parent="MainMargin/DataManagerVBox/TaskGrid/NewTaskPanel/Margin/CenterContainer/VBox/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 8
text = "Cancel"

[node name="CloneDataButton" type="Button" parent="MainMargin/DataManagerVBox/TaskGrid"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"Button_Medium"
text = "Clone
Data"

[node name="CloneDataPanel" type="PanelContainer" parent="MainMargin/DataManagerVBox/TaskGrid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MainMargin/DataManagerVBox/TaskGrid/CloneDataPanel"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="MainMargin/DataManagerVBox/TaskGrid/CloneDataPanel/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainMargin/DataManagerVBox/TaskGrid/CloneDataPanel/MarginContainer/CenterContainer"]
layout_mode = 2

[node name="CloneLabel" type="Label" parent="MainMargin/DataManagerVBox/TaskGrid/CloneDataPanel/MarginContainer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Cloning Label"
horizontal_alignment = 1

[node name="CloneLineEdit" type="LineEdit" parent="MainMargin/DataManagerVBox/TaskGrid/CloneDataPanel/MarginContainer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Load Error"
placeholder_text = "Name Here"
alignment = 1
expand_to_text_length = true
clear_button_enabled = true

[node name="CloneSpinBox" type="SpinBox" parent="MainMargin/DataManagerVBox/TaskGrid/CloneDataPanel/MarginContainer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1000.0
max_value = 3000.0
value = 2000.0
rounded = true
allow_greater = true
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MainMargin/DataManagerVBox/TaskGrid/CloneDataPanel/MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="CloneAcceptButton" type="Button" parent="MainMargin/DataManagerVBox/TaskGrid/CloneDataPanel/MarginContainer/CenterContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Accept"

[node name="CloneBackButton" type="Button" parent="MainMargin/DataManagerVBox/TaskGrid/CloneDataPanel/MarginContainer/CenterContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Back"

[node name="CloneCancelButton" type="Button" parent="MainMargin/DataManagerVBox/TaskGrid/CloneDataPanel/MarginContainer/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Cancel"

[node name="TaskCSVHBox" type="HBoxContainer" parent="MainMargin/DataManagerVBox"]
visible = false
layout_mode = 2
alignment = 1

[node name="ImportTasksheet" type="Button" parent="MainMargin/DataManagerVBox/TaskCSVHBox"]
layout_mode = 2
disabled = true
text = "Import Task"

[node name="ExportTaskCSV" type="Button" parent="MainMargin/DataManagerVBox/TaskCSVHBox"]
layout_mode = 2
disabled = true
text = "Export Task"

[node name="HSeparator" type="HSeparator" parent="MainMargin/DataManagerVBox"]
visible = false
layout_mode = 2

[node name="ProfileLabel" type="Label" parent="MainMargin/DataManagerVBox"]
visible = false
layout_mode = 2
theme_type_variation = &"Label_Large"
text = "Profile Data"
horizontal_alignment = 1

[node name="ProfileCSVHBox" type="HBoxContainer" parent="MainMargin/DataManagerVBox"]
visible = false
layout_mode = 2
alignment = 1

[node name="ImportProfileCSV" type="Button" parent="MainMargin/DataManagerVBox/ProfileCSVHBox"]
visible = false
layout_mode = 2
disabled = true
text = "Import Profile Data"

[node name="ExportProfileCSV" type="Button" parent="MainMargin/DataManagerVBox/ProfileCSVHBox"]
visible = false
layout_mode = 2
disabled = true
text = "Export Profile Data from Current Data"

[node name="HSeparator3" type="HSeparator" parent="MainMargin/DataManagerVBox"]
layout_mode = 2

[node name="CloseManager" type="Button" parent="MainMargin/DataManagerVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"Button_Medium"
text = "Close Data Manager"

[node name="ImportTaskFileDialog" type="FileDialog" parent="."]
title = "Import Task Data CSV"
initial_position = 2
size = Vector2i(600, 400)
ok_button_text = "Open"
mode_overrides_title = false
file_mode = 0
access = 1
filters = PackedStringArray("*.csv ; Comma Separated Values")

[connection signal="pressed" from="MainMargin/DataManagerVBox/TaskGrid/NewTaskButton" to="." method="_on_new_task_button_pressed"]
[connection signal="pressed" from="MainMargin/DataManagerVBox/TaskGrid/NewTaskPanel/Margin/CenterContainer/VBox/HBox/TaskAcceptButton" to="." method="_on_task_accept_button_pressed"]
[connection signal="pressed" from="MainMargin/DataManagerVBox/TaskGrid/NewTaskPanel/Margin/CenterContainer/VBox/HBoxContainer2/TaskCancelButton" to="." method="_on_task_cancel_button_pressed"]
[connection signal="pressed" from="MainMargin/DataManagerVBox/TaskGrid/CloneDataButton" to="." method="_on_clone_data_button_pressed"]
[connection signal="pressed" from="MainMargin/DataManagerVBox/TaskGrid/CloneDataPanel/MarginContainer/CenterContainer/VBoxContainer/HBoxContainer/CloneAcceptButton" to="." method="_on_clone_accept_button_pressed"]
[connection signal="pressed" from="MainMargin/DataManagerVBox/TaskGrid/CloneDataPanel/MarginContainer/CenterContainer/VBoxContainer/HBoxContainer/CloneBackButton" to="." method="_on_clone_back_button_pressed"]
[connection signal="pressed" from="MainMargin/DataManagerVBox/TaskGrid/CloneDataPanel/MarginContainer/CenterContainer/VBoxContainer/HBoxContainer/CloneCancelButton" to="." method="_on_clone_cancel_button_pressed"]
[connection signal="pressed" from="MainMargin/DataManagerVBox/TaskCSVHBox/ImportTasksheet" to="." method="_on_import_tasksheet_pressed"]
[connection signal="file_selected" from="ImportTaskFileDialog" to="." method="_on_import_task_file_dialog_file_selected"]
